[package]
name = "Nullspace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
async-trait = "0.1.89"
uuid = { version = "1.10", features = ["v4"] }
rust-embed = "8.0"
dashmap = "6.1.0"
rayon = "1.11.0"
rand = "0.10.0-rc.6"
parking_lot = "0.12.5"